--- a/USER/monitor.uvprojx
+++ b/USER/monitor.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F10X_MD,USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>..\USER;..\CORE;..\STM32F10x_FWLib\inc;..\HARDWARE\LED;..\SYSTEM;..\HARDWARE\OLED;..\HARDWARE\MAX30102;..\HARDWARE\KEY;..\HARDWARE\MPU6050;..\HARDWARE\MPU6050\eMPL;..\HARDWARE\ESP8266;..\HARDWARE\ESP8266\NET;..\HARDWARE\BEEP;..\HARDWARE\DS18B20</IncludePath>
+              <IncludePath>..\USER;..\CORE;..\STM32F10x_FWLib\inc;..\HARDWARE\LED;..\SYSTEM;..\HARDWARE\OLED;..\HARDWARE\MAX30102;..\HARDWARE\KEY;..\HARDWARE\MPU6050;..\HARDWARE\MPU6050\eMPL;..\HARDWARE\ESP8266;..\HARDWARE\ESP8266\NET;..\HARDWARE\BEEP;..\HARDWARE\DS18B20;..\HARDWARE\Init;..\SYSTEM\Hard_I2C;..\SYSTEM\Soft_IIC;..\SYSTEM\Sys;..\SYSTEM\SysTick;..\SYSTEM\Task_List;..\SYSTEM\TIM;..\SYSTEM\USART</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -608,35 +608,50 @@
               <FileType>1</FileType>
               <FilePath>..\HARDWARE\ESP8266\ESP_USART.c</FilePath>
             </File>
+            <File>
+              <FileName>init.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\Init\init.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>SYSTEM</GroupName>
           <Files>
             <File>
-              <FileName>delay.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\SYSTEM\delay.c</FilePath>
-            </File>
-            <File>
-              <FileName>USART.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\SYSTEM\USART.c</FilePath>
-            </File>
-            <File>
               <FileName>i2c.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\SYSTEM\i2c.c</FilePath>
+              <FilePath>..\SYSTEM\Hard_I2C\i2c.c</FilePath>
             </File>
             <File>
-              <FileName>soft_I2C.c</FileName>
+              <FileName>soft_iic.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\SYSTEM\soft_I2C.c</FilePath>
+              <FilePath>..\SYSTEM\Soft_IIC\soft_iic.c</FilePath>
             </File>
             <File>
               <FileName>sys.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\SYSTEM\sys.c</FilePath>
+              <FilePath>..\SYSTEM\Sys\sys.c</FilePath>
+            </File>
+            <File>
+              <FileName>SysTick.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\SYSTEM\SysTick\SysTick.c</FilePath>
+            </File>
+            <File>
+              <FileName>Task_List.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\SYSTEM\Task_List\Task_List.c</FilePath>
+            </File>
+            <File>
+              <FileName>TIM.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\SYSTEM\TIM\TIM.c</FilePath>
+            </File>
+            <File>
+              <FileName>USART.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\SYSTEM\USART\USART.c</FilePath>
             </File>
           </Files>
         </Group>
